Updated tenants page and registration page

--- a/angular/src/app/owner/owners.tpl.html
+++ b/angular/src/app/owner/owners.tpl.html
@@ -10,7 +10,7 @@
                     </div>
                     <div class="col-sm-4 col-md-4 col-lg-4 feature-icon">
                          <img src="assets/img/features/owners/vacancy.gif" class="center-block">
-                         <h4 class="text-center">Reduce vacancy time</h4>
+                         <h4 class="text-center">Reduce Vacancy Time</h4>
                     </div>
                     <div class="col-sm-4 col-md-4 col-lg-4 feature-icon">
                          <img src="assets/img/features/owners/lease-sign.gif" class="center-block">
