--- a/angular/src/app/tenant/tenants.tpl.html
+++ b/angular/src/app/tenant/tenants.tpl.html
@@ -6,7 +6,7 @@
             <div class="row">
                     <div class="col-sm-4 feature-icon">
                          <img src="assets/img/features/tenants/save-money.gif" class="center-block">
-                         <h4 class="text-center">One Application &amp; Credit Check for all Listings</h4>
+                         <h4 class="text-center">One Application &amp; Credit Check</h4>
                     </div>
                     <div class="col-sm-4 feature-icon">
                          <img src="assets/img/features/tenants/eliminate-scams.gif" class="center-block">
@@ -14,7 +14,7 @@
                     </div>
                     <div class="col-sm-4 feature-icon">
                          <img src="assets/img/features/tenants/property-availability.gif" class="center-block">
-                         <h4 class="text-center">View Current Offers &amp; Status</h4>
+                         <h4 class="text-center">View Current Offers &amp; Availability</h4>
                     </div>
             </div>
             <div class="row vertical-buffer">
@@ -29,11 +29,11 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                <h4>One Application &amp; Credit Check for all Listings</h4>
+                <h4>One Application &amp; Credit Check</h4>
                 <div class="row">
-                    <img pl-holder="holder.js/336x208/auto/textmode:exact/^cccccc:^969696" class="col-sm-4 col-xs-12 img-responsive">
-                    <ul class="col-sm-8 col-xs-12 list-unstyled">
-                       <li>Save time with one online application</li>
+                    <img src="assets/img/features/tenants/one-application.png" class="col-sm-7 col-xs-12 img-responsive">
+                    <ul class="col-sm-5 col-xs-12 list-unstyled">
+                       <li>Save time with one profile for all properties</li>
                        <li>Create an instantly shareable Credit Report for $10</li>
                        <li>Invite owners to view your application and credit report</li>
                     </ul>
@@ -49,12 +49,12 @@
             <div class="col-sm-12">
                 <h4>Scam Free</h4>
                 <div class="row">
-                    <img pl-holder="holder.js/336x208/auto/textmode:exact/^cccccc:^969696" class="col-sm-4 col-xs-12 img-responsive">
-                    <ul class="col-sm-8 col-xs-12 list-unstyled">
+                    <ul class="col-sm-5 col-xs-12 list-unstyled">
                        <li>Select your property with confidence</li>
                        <li>Property owners and managers are verified</li>
                        <li>Enhance your privacy and identity protection</li>
                     </ul>
+                    <img src="assets/img/features/tenants/verification.png" class="col-sm-7 col-xs-12 img-responsive">
                 </div>
             </div>
         </div>
@@ -67,8 +67,8 @@
             <div class="col-sm-12">
                 <h4>View Current Offers &amp; Status</h4>
                 <div class="row">
-                    <img pl-holder="holder.js/336x208/auto/textmode:exact/^cccccc:^969696" class="col-sm-4 col-xs-12 img-responsive">
-                    <ul class="col-sm-8 col-xs-12 list-unstyled">
+                    <img pl-holder="holder.js/336x208/auto/textmode:exact/^cccccc:^969696" class="col-sm-7 col-xs-12 img-responsive">
+                    <ul class="col-sm-5 col-xs-12 list-unstyled">
                        <li>Snapshot of your profile, credit score, rental offers, and message center</li>
                        <li>Current availability of the property to rent</li>
                        <li>Make an offer or add a property to watch-list</li>
