bunch of fixes with vinit

--- a/angular/src/app/owner/bid-details.tpl.html
+++ b/angular/src/app/owner/bid-details.tpl.html
@@ -16,7 +16,7 @@
             </div>
             <div class="col-sm-6">
                 <div class="row top-buffer-sm small-pad">
-                    <div class="col-sm-3 counter text-center">
+                    <div class="col-sm-3 col-sm-offset-3 counter text-center">
                         <p class="badge top-buffer-sm" style="font-size: 18px; background-color: #51b65b; line-height: 2;">Accepted</p>
                     </div>
                     <div class="col-sm-3 counter">
@@ -26,10 +26,6 @@
                     <div class="col-sm-3 counter">
                         <p class="counter-val">{{bid.moveInDate | date: 'MMM dd'}}</p>
                         <p class="counter-desc">Move In Date</p>
-                    </div>
-                    <div class="col-sm-3 counter">
-                        <p class="counter-val">900</p>
-                        <p class="counter-desc">Credit Score</p>
                     </div>
                 </div>
             </div>
