--- a/angular/src/app/owner/partials/property-form.tpl.html
+++ b/angular/src/app/owner/partials/property-form.tpl.html
@@ -5,7 +5,7 @@
         <button type="button" class="btn btn-rented pull-right" style="margin-right: 10px" ng-click="save(property)">Save</button>
     </div>
 
-    <h1 style="margin-top: 0px;" ng-show="add">Property {{profile.properties.length+1}}</h1>
+    <h1 style="margin-top: 0px;" ng-show="add">Property {{propertyNo}}</h1>
 
     <div class="content-header" ng-hide="add">
         <div class="row" style="min-height: 210px;">
