--- a/angular/src/app/owner/tenants.tpl.html
+++ b/angular/src/app/owner/tenants.tpl.html
@@ -5,11 +5,11 @@
         <div class="row bottom-buffer">
             <div class="col-sm-7 pull-right">
                 <div class="row">
-                    <div class="col-sm-3 counter active">
-                        <p class="counter-val">80%</p>
-                        <p class="counter-desc">Occupancy Rate</p>
+                    <div class="col-sm-offset-9 col-sm-3 counter">
+                        <p class="counter-val">15k</p>
+                        <p class="counter-desc">Monthly Income</p>
                     </div>
-                    <div class="col-sm-3 counter">
+                    <!--div class="col-sm-3 counter">
                         <p class="counter-val">Aug 15</p>
                         <p class="counter-desc">Upcoming Vacancy</p>
                     </div>
@@ -20,7 +20,7 @@
                     <div class="col-sm-3 counter">
                         <p class="counter-val">1-2</p>
                         <p class="counter-desc">Pets Ok</p>
-                    </div>
+                    </div-->
                 </div>
             </div>
         </div>
@@ -44,8 +44,8 @@
               </div>
               <div class="col-sm-9 vcenter" style="padding-left: 35px;">
                 <h4 style="font-size: 24px; font-weight: bold;">Kevin Lee</h4>
-                <p><strong>Job Title:</strong> $345.000</p>
-                <p><strong>Phone Number:</strong> 800</p>
+                <p><strong>Rent:</strong> $345.000</p>
+                <p><strong>Phone:</strong> 555.555.555</p>
                 <p><strong>Pets:</strong> Ok</p>
               </div>
             </div>
