--- a/angular/src/less/main.less
+++ b/angular/src/less/main.less
@@ -297,6 +297,10 @@ body pre {
    border: 0px;
 }
 
+body .navbar-fixed-top {
+  z-index: 1051;
+}
+
 body .modal-dialog {
    margin-top: 64px;
    margin-bottom: 0px;
