--- a/angular/src/app/owner/dashboard.tpl.html
+++ b/angular/src/app/owner/dashboard.tpl.html
@@ -17,7 +17,7 @@
                   </div>
                   <div class="col-sm-8">
                     <h4 style="font-size: 24px; font-weight: bold;">{{profile.firstName}} {{profile.lastName}}</h4>
-                    <p>I have {{profile.properties.length}} condos for rent.</p>
+                    <p>I have {{profile.properties.length}} condo(s) for rent.</p>
                   </div>
                 </div>
             </div>
@@ -53,7 +53,7 @@
     <div class="row properties">
         <div class="col-sm-3" ng-repeat="property in properties | loadProperty">
             <ng-include src="'owner/partials/property-teaser.tpl.html'"></ng-include>
-            <a href="#/owners/properties/{{property.$id}}/status" class="btn btn-rented">See More</a>
+            <a href="#/owners/properties/{{property.$id}}/status" class="btn btn-rented">View Offers</a>
         </div>
     </div>
 
