--- a/angular/src/app/owner/partials/tenant-profile.tpl.html
+++ b/angular/src/app/owner/partials/tenant-profile.tpl.html
@@ -106,6 +106,12 @@
            </div>
         </fieldset>
     </div>
+    <div class="col-sm-6">
+        <fieldset class="readonly">
+          <legend>Credit Report</legend>
+          <a href="" download="" class="field-text">Download <i class="glyphicon glyphicon-cloud-download"></i></a>
+        </fieldset>
+    </div>
 </div>
 <div class="row">
     <div class="col-sm-6">
