--- a/angular/src/app/property/partials/bid.tpl.html
+++ b/angular/src/app/property/partials/bid.tpl.html
@@ -31,6 +31,7 @@
         </div>
         <div class="col-xs-6">
             <button type="submit" class="btn btn-rented">Make An Offer</button>
+            <!-- Edit My Offer -->
         </div>
     </div>
 </form>
