--- a/angular/src/app/tenant/dashboard.tpl.html
+++ b/angular/src/app/tenant/dashboard.tpl.html
@@ -17,28 +17,28 @@
                   </div>
                   <div class="col-sm-8">
                     <h4 style="font-size: 24px; font-weight: bold;">{{profile.firstName}} {{profile.lastName}}</h4>
-                    <p>I am looking for a flat.</p>
+                    <p>I am looking for a rental</p>
                   </div>
                 </div>
             </div>
             <div class="col-sm-offset-1 col-sm-7">
                 <div class="row">
-                    <div class="col-sm-3 counter">
+                    <div class="col-sm-offset-6 col-sm-3 counter">
                         <p class="counter-val">15</p>
                         <p class="counter-desc">Offers</p>
                     </div>
                     <div class="col-sm-3 counter">
-                        <p class="counter-val">10</p>
-                        <p class="counter-desc">Active Properties</p>
+                        <p class="counter-val">{{watchlist.length || 0}}</p>
+                        <p class="counter-desc">Watching</p>
                     </div>
-                    <div class="col-sm-3 counter">
+                    <!-- div class="col-sm-3 counter">
                         <p class="counter-val">15k</p>
                         <p class="counter-desc">Monthly Income</p>
                     </div>
                     <div class="col-sm-3 counter">
                         <p class="counter-val">14 days</p>
                         <p class="counter-desc">Left for...</p>
-                    </div>
+                    </div -->
                 </div>
             </div>
         </div>
@@ -61,11 +61,11 @@
         <div class="col-sm-9">
            <h5 ng-show="watchlist.length">Watching</h5>
            <div class="row watching" ng-repeat="property in watchlist | loadProperty" ng-show="property.address">
-               <div class="col-sm-1">
-                  <span class="badge" style="background-color: #89d4cd;">98<sub>%</sub></span> 
+               <div class="col-sm-2">
+                  <span class="badge" style="background-color: #89d4cd;">1 <sub>offer(s)</sub></span> 
                   <!--span class="badge" style="background-color: #ff503f;">33<sub>%</sub></span --> 
                </div>
-               <div class="col-sm-9">
+               <div class="col-sm-8">
                   <p>{{property.address.street}}, {{property.address.city}}, {{property.address.state}} {{property.address.zip}}</p> 
                </div>
                <div class="col-sm-2">
