--- a/angular/src/app/owner/owners.tpl.html
+++ b/angular/src/app/owner/owners.tpl.html
@@ -48,7 +48,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                <h4>Reduce vacancy time</h4>
+                <h4>Reduce Vacancy Time</h4>
                 <div class="row">
                     <img pl-holder="holder.js/336x208/auto/textmode:exact/^cccccc:^969696" class="col-sm-4 col-xs-12 img-responsive">
                     <ul class="col-sm-8 col-xs-12 list-unstyled">
