Updated tenant and owner landing pages

--- a/angular/src/app/tenant/tenants.tpl.html
+++ b/angular/src/app/tenant/tenants.tpl.html
@@ -34,7 +34,7 @@
                     <img src="assets/img/features/tenants/one-application.png" class="col-sm-7 col-xs-12 img-responsive">
                     <ul class="col-sm-5 col-xs-12 list-unstyled">
                        <li>Save time with one profile for all properties</li>
-                       <li>Create an instantly shareable Credit Report for $10</li>
+                       <li>Create an instantly shareable <a href="http://www.experian.com/connect/" target="_blank">Experian Credit Report</a> for $14.95</li>
                        <li>Invite owners to view your application and credit report</li>
                     </ul>
                 </div>
