--- a/angular/src/app/owner/owners.tpl.html
+++ b/angular/src/app/owner/owners.tpl.html
@@ -32,7 +32,7 @@
             <div class="col-sm-12">
                 <h4>Easy Tenant Screening</h4>
                 <div class="row">
-                    <img pl-holder="holder.js/336x208/auto/textmode:exact/^cccccc:^969696" class="col-sm-7 col-xs-12 img-responsive">
+                    <img src="assets/img/features/owners/credit-report.png" class="col-sm-7 col-xs-12 img-responsive">
                     <ul class="col-sm-5 col-xs-12 list-unstyled">
                        <li><a href="http://www.experian.com/connect/" target="_blank">Experian Connect</a> tenant credit checks</li>
                        <li>Includes public record filings (such as: bankruptcies, tax liens and evictions)</li>
