--- a/angular/src/app/owner/partials/property-teaser.tpl.html
+++ b/angular/src/app/owner/partials/property-teaser.tpl.html
@@ -1,4 +1,8 @@
 <img ng-src="{{property.pictures[0]}}" class="img-responsive">
 <p><strong>Number of offers:</strong> {{property.bids.length}}</p>
-<p><strong>Best offer:</strong> {{property.bestOffer.rentAmount | rentCurrency }}</p>
+<p>
+    <strong ng-hide="property.bestOffer.accepted">Best offer:</strong> 
+    <strong ng-show="property.bestOffer.accepted">Accepted offer:</strong> 
+    {{property.bestOffer.rentAmount | rentCurrency }}
+</p>
 <p><strong>Move In Date:</strong> {{property.bestOffer.moveInDate | date:'MMM dd'}}</p>
