--- a/angular/src/app/owner/properties.tpl.html
+++ b/angular/src/app/owner/properties.tpl.html
@@ -2,7 +2,7 @@
     <h1>Active Properties</h1>
 
     <div class="row properties">
-        <div class="col-sm-3 top-buffer-lg" ng-repeat="property in properties | loadProperty">
+        <div class="col-sm-3 top-buffer-lg" ng-repeat="property in properties | loadProperty:'active'">
             <ng-include src="'owner/partials/property-teaser.tpl.html'"></ng-include>
             <a href="#/property/{{property.$id}}" class="btn btn-rented">View Property</a>
             <a href="#/owners/properties/{{property.$id}}/status" class="btn btn-rented">View Offers</a>
@@ -13,11 +13,11 @@
     <h1>Tenant Occupied</h1>
 
     <div class="row properties bottom-buffer-xl">
-        <div class="col-sm-3 top-buffer-lg" ng-repeat="property in [1,2,3,4]">
-            <img pl-holder="holder.js/238x158">
-            <p><strong>Rent:</strong> $5000</p>
-            <p><strong>Tenant:</strong> John Smith</p>
-            <p><strong>Phone:</strong> 555.555.555</p>
+        <div class="col-sm-3 top-buffer-lg" ng-repeat="property in properties | loadProperty:'rented'">
+            <img ng-src="{{property.pictures[0]}}" class="img-responsive">
+            <p><strong>Rent:</strong> {{property.bestOffer.rentAmount | rentCurrency}}</p>
+            <p><strong>Tenant:</strong> {{property.tenant.firstName}} {{property.tenant.lastName}}</p>
+            <p><strong>Phone:</strong> {{property.tenant.phone}}</p>
             <a href="#/property/{{property.$id}}" class="btn btn-rented">View Property</a>
             <a href="#/owners/properties/{{property.$id}}/status" class="btn btn-rented">View Offers</a>
             <a href="#/owners/properties/{{property.$id}}/edit" class="btn btn-rented">Edit</a>
