--- a/angular/src/app/owner/tenant-details.tpl.html
+++ b/angular/src/app/owner/tenant-details.tpl.html
@@ -18,7 +18,7 @@
                 <div class="row top-buffer-sm small-pad">
                     <div class="col-sm-3 col-sm-offset-3 counter">
                         <p class="counter-val">{{property.bestOffer.rentAmount | rentCurrency}}</p>
-                        <p class="counter-desc">Offer</p>
+                        <p class="counter-desc">Rent</p>
                     </div>
                     <div class="col-sm-3 counter">
                         <p class="counter-val">{{property.bestOffer.moveInDate | date: 'MMM dd'}}</p>
