--- a/angular/src/less/buttons.less
+++ b/angular/src/less/buttons.less
@@ -42,6 +42,44 @@
   filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
 }
 
+.btn-rented-success.active {
+  color: rgba(255, 255, 255, 0.75);
+}
+.btn-rented-success {
+  color: #ffffff;
+  font-size: 18px;
+  padding: 8px 18px;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  background-color: #5fbc69;
+  background-image: -moz-linear-gradient(top, #51b65b, #75c57d);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#51b65b), to(#75c57d));
+  background-image: -webkit-linear-gradient(top, #51b65b, #75c57d);
+  background-image: -o-linear-gradient(top, #51b65b, #75c57d);
+  background-image: linear-gradient(to bottom, #51b65b, #75c57d);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff51b65b', endColorstr='#ff75c57d', GradientType=0);
+  border-color: #75c57d #75c57d #46a750;
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  *background-color: #75c57d;
+  /* Darken IE7 buttons by default so they stand out more given they won't have borders */
+
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
+}
+.btn-rented-success:hover,
+.btn-rented-success:focus,
+.btn-rented-success:active,
+.btn-rented-success.active,
+.btn-rented-success.disabled,
+.btn-rented-success[disabled] {
+  color: #ffffff;
+  background-color: #75c57d;
+  *background-color: #63be6c;
+}
+.btn-rented-success:active,
+.btn-rented-success.active {
+  background-color: #51b65b ;
+}
+
 .button-container {
  position: relative;
 }
