--- a/angular/src/app/tenant/dashboard.tpl.html
+++ b/angular/src/app/tenant/dashboard.tpl.html
@@ -54,6 +54,7 @@
         <div class="col-sm-3" ng-repeat="property in properties | loadProperty">
             <ng-include src="'tenant/partials/property-teaser.tpl.html'"></ng-include>
             <a href="#/property/{{property.$id}}" class="btn btn-rented">See More</a>
+            <button ng-click="accepted(property)" class="btn btn-rented-success" ng-show="property.bestOffer.userId==profile.$id">Accepted</button>
         </div>
     </div>
 
