--- a/angular/src/app/nav/partials/banner.tpl.html
+++ b/angular/src/app/nav/partials/banner.tpl.html
@@ -1,1 +1,1 @@
-<div ng-click="banner.content=null" ng-show="banner.content" class="alert alert-{{banner.contentClass}} text-center top-banner-channel" ng-bind-html="banner.content"></div>
+<div ng-click="banner.content=null" ng-show="banner.content" class="alert alert-{{banner.contentClass}} text-center top-banner-channel" ng-bind-html="banner.content" style="margin-bottom: 0px;"></div>
