--- a/angular/src/app/tenant/properties.tpl.html
+++ b/angular/src/app/tenant/properties.tpl.html
@@ -3,9 +3,10 @@
 
     <div class="row properties">
         <div class="col-sm-3 top-buffer-lg" ng-repeat="property in properties | loadProperty">
+            <div ng-repeat="bid in property.bids | loadBid" style="display: none;"></div> <!-- FIXME -->
             <ng-include src="'tenant/partials/property-teaser.tpl.html'"></ng-include>
             <a href="#/property/{{property.$id}}" class="btn btn-rented">See More</a>
-            <button class="btn btn-rented" ng-click="cancelBid(property)">Cancel My Offer</button>
+            <button class="btn btn-rented" ng-click="cancelBid(property)" ng-hide="(!property.bestOffer)||(property.bestOffer.userId==profile.$id&&property.bestOffer.accepted)">Cancel My Offer</button>
         </div>
     </div>
 
