--- a/angular/src/app/property/partials/bid.tpl.html
+++ b/angular/src/app/property/partials/bid.tpl.html
@@ -30,8 +30,8 @@
             <a class="btn btn-rented" ng-click="unwatch(property)" ng-show="inWatchlist(property)">Remove From Watchlist</a>
         </div>
         <div class="col-xs-6">
-            <button type="submit" class="btn btn-rented">Make An Offer</button>
-            <!-- Edit My Offer -->
+            <button type="submit" class="btn btn-rented" ng-hide="bid.userId">Make An Offer</button>
+            <button type="button" class="btn btn-rented" ng-show="bid.userId" ng-click="editMyBid(bid,property)">Edit My Offer</button>
         </div>
     </div>
 </form>
