--- a/angular/src/app/owner/tenants.tpl.html
+++ b/angular/src/app/owner/tenants.tpl.html
@@ -6,7 +6,7 @@
             <div class="col-sm-7 pull-right">
                 <div class="row">
                     <div class="col-sm-offset-9 col-sm-3 counter">
-                        <p class="counter-val">{{monthlyIncome}}k</p>
+                        <p class="counter-val">{{monthlyIncome | rentCurrency}}</p>
                         <p class="counter-desc">Monthly Income</p>
                     </div>
                 </div>
