--- a/angular/src/app/tenant/partials/profile-page-1.tpl.html
+++ b/angular/src/app/tenant/partials/profile-page-1.tpl.html
@@ -4,7 +4,7 @@
    <div class="row">
        <div class="col-sm-2">
             <span class="fileinput-button">
-               <img class="media-object img-circle img-responsive" alt="Upload your picture..." style="display: inline; margin-bottom: 10px;" ng-src="{{profile.picture || 'assets/img/avatar.png'}}">
+               <img class="media-object img-circle img-responsive" alt="Upload your picture..." style="display: inline; margin-bottom: 10px; width: 114px;" ng-src="{{profile.picture || 'assets/img/avatar.png'}}">
                <input type="file" ng-file-select="pictureSelected($files)" accept="image/*">
             </span>
        </div>
