--- a/angular/src/app/owner/dashboard.tpl.html
+++ b/angular/src/app/owner/dashboard.tpl.html
@@ -24,15 +24,15 @@
             <div class="col-sm-offset-1 col-sm-7">
                 <div class="row">
                     <div class="col-sm-offset-3 col-sm-3 counter">
-                        <p class="counter-val">15</p>
+                        <p class="counter-val">{{offersNo}}</p>
                         <p class="counter-desc">Offers</p>
                     </div>
                     <div class="col-sm-3 counter">
-                        <p class="counter-val">10</p>
+                        <p class="counter-val">{{activeProperties}}</p>
                         <p class="counter-desc">Active Properties</p>
                     </div>
                     <div class="col-sm-3 counter">
-                        <p class="counter-val">15k</p>
+                        <p class="counter-val">{{monthlyIncome | rentCurrency}}</p>
                         <p class="counter-desc">Monthly Income</p>
                     </div>
                     <!--div class="col-sm-3 counter">
@@ -203,4 +203,7 @@
         </div>
     </div>
 
+</div>
+<div ng-repeat="property in props | loadProperty" style="display: none;">
+{{intercept(property)}}
 </div>
