--- a/angular/src/app/owner/partials/property-form.tpl.html
+++ b/angular/src/app/owner/partials/property-form.tpl.html
@@ -87,7 +87,7 @@
                <div class="form-group">
                    <label class="col-sm-8 control-label">Suggested Monthly Rent</label>
                    <div class="col-sm-4">
-                      <input class="form-control input-lg" type="number" ng-model="property.targetRent">
+                      <input class="form-control input-lg" type="number" ng-model="property.targetRent" placeholder="US Dollars">
                    </div>
                </div>
            </div>
@@ -114,7 +114,7 @@
                <div class="form-group" ng-show="property.dynamicPricing">
                    <label class="col-sm-8 control-label">Lowest Acceptable Offer</label>
                    <div class="col-sm-4">
-                      <input class="form-control input-lg" type="number" ng-model="property.lowestRent">
+                      <input class="form-control input-lg" type="number" ng-model="property.lowestRent" placeholder="US Dollars">
                    </div>
                </div>
            </div>
@@ -149,13 +149,13 @@
                <div class="form-group">
                    <label class="col-sm-6 control-label">Security Deposit</label>
                    <div class="col-sm-6">
-                      <input class="form-control input-lg" type="number" ng-model="property.securityDeposit">
+                      <input class="form-control input-lg" type="number" ng-model="property.securityDeposit" placeholder="US Dollars">
                    </div>
                </div>
                <div class="form-group" ng-show="property.pets.allowDogs || property.pets.allowCats || property.pets.allowOther">
                    <label class="col-sm-6 control-label">Pet Deposit per Pet</label>
                    <div class="col-sm-6">
-                      <input class="form-control input-lg" type="number" ng-model="property.pets.deposit">
+                      <input class="form-control input-lg" type="number" ng-model="property.pets.deposit" placeholder="US Dollars">
                    </div>
                </div>
            </div>
@@ -167,12 +167,12 @@
                      <div class="row">
                          <div class="checkbox col-sm-4">
                             <label class="control-label">
-                              <input type="checkbox" ng-model="property.pets.allowDogs"> Dogs
+                              <input type="checkbox" ng-model="property.pets.allowDogs"> Dogs Ok
                             </label>
                          </div>
                          <div class="checkbox col-sm-4">
                             <label class="control-label">
-                              <input type="checkbox" ng-model="property.pets.allowCats"> Cats
+                              <input type="checkbox" ng-model="property.pets.allowCats"> Cats Ok
                             </label>
                          </div>
                          <div class="checkbox col-sm-4">
@@ -185,7 +185,7 @@
                </div>
                <div class="form-group">
                    <div class="col-sm-12">
-                      <input class="form-control input-lg" type="text" ng-model="property.pets.other" ng-show="property.pets.allowOther" placeholder="Ex. Turtle">
+                      <input class="form-control input-lg" type="text" ng-model="property.pets.other" ng-show="property.pets.allowOther" placeholder="Ex. Submit Request, Turtles, Snakes">
                    </div>
                </div>
            </div>
