updated login and property form
- added register link in login window
- added additional helper text in property form

--- a/angular/src/app/owner/partials/property-form.tpl.html
+++ b/angular/src/app/owner/partials/property-form.tpl.html
@@ -216,6 +216,9 @@
                     <input id="fileupload" type="file" name="image" ng-file-select="pictureSelected($files)" multiple accept="image/*">
                 </span>
            </div>
+           <div class="col-sm-8">
+                <span>Upload property pictures, max file size 5MB per picture. <br>The first picture will be your property profile picture.</span>
+           </div>
 
        </div>
 
