--- a/angular/src/app/user/partials/loginform.tpl.html
+++ b/angular/src/app/user/partials/loginform.tpl.html
@@ -26,4 +26,9 @@
             <input type="submit" value="Login" ng-hide="createMode" class="btn btn-rented">
         </div>
     </div>
+    <div class="row" style="padding-bottom: 50px;">
+        <div class="col-xs-6 center text-center">
+            <a type="button" href="#/register" class="btn btn-rented" >Create a new account!</a>
+        </div>
+    </div>
 </form>
